fixed several return buttons under ie; do not show clone folder form in media pools; prevent overlapping of last accessed items with main menu
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@15853 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -752,6 +752,7 @@ a.MMInactive:link, a.MMInactive:visited
 	text-decoration:none;
 	margin: 0px 0px 5px 15px;
 	font-weight: normal;
+	white-space: nowrap;
 }
 
 a.MMInactive:hover
@@ -772,6 +773,7 @@ a.MMActive:link, a.MMActive:visited
 	text-decoration:none;
 	margin: 0px 0px 5px 15px;
 	font-weight: normal;
+	white-space: nowrap;
 }
 
 a.MMActive:hover
